# privacy-pirate-safe-data

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/services/: backend.ts
app/ui/about/: about-page.tsx
app/ui/common/: button-row.tsx  index.ts  json-viewer.tsx  privacy-slider.tsx
app/ui/form/: form-page.tsx
app/ui/pdf/: pdf-page.tsx
app/ui/picture/: picture-page.tsx
app/ui/test/: test-page.tsx
app/ui/text/: text-page.tsx
backend/: Dockerfile  config.py  download_models.py  main.py  pyproject.toml
backend/app/: config.py
backend/app/api/: routes.py
backend/app/core/: embedder.py  pipeline.py  privacy.py  scanner.py  vision.py
backend/app/ner/: pii_image_extractor.py
backend/app/processors/: audio.py  base.py  document_blur.py  face_blur.py  form.py  text.py
backend/app/utils/: image_tools.py
backend/tests/: conftest.py
backend/tests/integration/: test_audio_int.py  test_base_int.py  test_document_blur_int.py  test_embeder_int.py  test_face_blur_int.py  test_form_int.py  test_pii_extraction_int.py  test_pipeline_int.py  test_privacy_int.py  test_scanner_int.py  test_text_int.py  test_vision_int.py
backend/tests/unit/: test_audio_unit.py  test_base_unit.py  test_document_blur_unit.py  test_embedder_unit.py  test_face_blur_unit.py  test_form_unit.py  test_pii_extraction_unit.py  test_pipeline_unit.py  test_privacy_unit.py  test_scanner_unit.py  test_text_unit.py  test_vision_unit.py
components/: pdf-viewer.tsx
(+5 files in other folders)
