[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Flask backend for the safe-data project"
authors = ["major.gergely <major.gergely@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "3.0.0"
flask-cors = "4.0.0"
numpy = "^2.4.1"
requests = "^2.32.5"
pillow = "^12.1.0"
pdf2image = "^1.17.0"
gliner = "^0.2.24"
python-dotenv = "^1.2.1"
faster-whisper = "^1.2.1"
dotenv = "^0.9.9"
pypdfium2 = "^5.3.0"
pytest = "^9.0.2"
scikit-learn = "^1.8.0"
torch = "^2.10.0"
opencv-python = "^4.13.0.90"
pydantic = "^2.12.5"
pymupdf = "^1.26.7"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"